kubernetes/production/agenda-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: cloudjobs
  name: agenda-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: agenda-service
  template:
    metadata:
      labels:
        project: cloudjobs
        name: agenda-service
    spec:
      containers:
      - name: agenda-service
        image: gcr.io/cloudjobs/cloudjobs-agenda-service:1.09
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 10002
        resources: {}
      restartPolicy: Always
