kubernetes/production/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
   - port: 10000
     targetPort: 10000
  selector:
    name: auth-service
  type: ClusterIP
