kubernetes/production/cloudjobs-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudjobs-database
  labels:
    name: cloudjobs-database
spec:
  selector:
    name: cloudjobs-database
  type:  ClusterIP
  ports:
  - port:  27017
    targetPort:  27017
