kubernetes/production/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: cloudjobs-frontend
  name: cloudjobs-frontend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
  selector:
    name: cloudjobs-frontend
