kubernetes/production/keywords-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: keywords-service
  name: keywords-service
spec:
  ports:
  - port: 10003
    targetPort: 10003
  selector:
    name: keywords-service
  type: ClusterIP
