kubernetes/production/search-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: search-service
  name: search-service
spec:
  ports:
  - port: 10001
    targetPort: 10001
  selector:
    name: search-service
  type: ClusterIP
