kubernetes/production/statistics-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: statistics-service
  name: statistics-service
spec:
  ports:
  - port: 10004
    targetPort: 10004
  selector:
    name: statistics-service
  type: ClusterIP
